# build system configuration

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# project configuration

[project]
name = "russell"
requires-python = ">=3.10"
version = "0.7.0"

description = "A static HTML blog generator."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["blog", "static", "html", "generator"]
authors = [
  { name = "Andreas Lutro", email = "anlutro@gmail.com" }
]

dependencies = [
    "feedgen ~= 1.0",
    "jinja2 ~= 3.0",
    "markdown ~= 2.6",
    "python-dateutil ~= 2.6",
    "python-slugify ~= 8.0",
]

[project.urls]
Homepage = "https://github.com/anlutro/russell"
Repository = "https://github.com/anlutro/russell.git"
Issues = "https://github.com/anlutro/russell/issues"

[project.scripts]
russell = "russell.cli:main"



# dev and test dependencies + config

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "build>=1.0",
    "twine>=6.0",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
